@@ -4,24 +4,30 @@ import static com.linkedin.datahub.graphql.TestUtils.getMockAllowContext;
 import static com.linkedin.datahub.graphql.TestUtils.getMockEntityService;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mockStatic;
+import static org.testng.Assert.assertThrows;
 import static org.testng.Assert.assertTrue;
 import static org.testng.Assert.expectThrows;
 
-import com.google.common.collect.ImmutableList;
 import com.linkedin.businessattribute.BusinessAttributeAssociation;
 import com.linkedin.businessattribute.BusinessAttributes;
 import com.linkedin.common.urn.BusinessAttributeUrn;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.datahub.graphql.QueryContext;
+import com.linkedin.datahub.graphql.exception.AuthorizationException;
 import com.linkedin.datahub.graphql.generated.AddBusinessAttributeInput;
 import com.linkedin.datahub.graphql.generated.ResourceRefInput;
+import com.linkedin.datahub.graphql.resolvers.mutate.util.BusinessAttributeUtils;
 import com.linkedin.metadata.Constants;
 import com.linkedin.metadata.entity.EntityService;
 import com.linkedin.metadata.entity.ebean.batch.AspectsBatchImpl;
 import graphql.schema.DataFetchingEnvironment;
 import io.datahubproject.metadata.context.OperationContext;
 import java.net.URISyntaxException;
+import java.util.List;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
+import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
 public class AddBusinessAttributeResolverTest {
@@ -33,21 +39,16 @@ public class AddBusinessAttributeResolverTest {
   private QueryContext mockContext;
   private DataFetchingEnvironment mockEnv;
 
+  @BeforeMethod
   private void init() {
     mockService = getMockEntityService();
     mockEnv = Mockito.mock(DataFetchingEnvironment.class);
-  }
-
-  private void setupAllowContext() {
     mockContext = getMockAllowContext();
     Mockito.when(mockEnv.getContext()).thenReturn(mockContext);
   }
 
   @Test
   public void testSuccess() throws Exception {
-    init();
-    setupAllowContext();
-
     Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(addBusinessAttributeInput());
     Mockito.when(
             mockService.exists(
@@ -74,9 +75,6 @@ public class AddBusinessAttributeResolverTest {
 
   @Test
   public void testBusinessAttributeAlreadyAdded() throws Exception {
-    init();
-    setupAllowContext();
-
     Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(addBusinessAttributeInput());
     Mockito.when(
             mockService.exists(
@@ -102,9 +100,6 @@ public class AddBusinessAttributeResolverTest {
 
   @Test
   public void testBusinessAttributeNotExists() throws Exception {
-    init();
-    setupAllowContext();
-
     Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(addBusinessAttributeInput());
     Mockito.when(
             mockService.exists(
@@ -129,6 +124,42 @@ public class AddBusinessAttributeResolverTest {
         .ingestProposal(any(OperationContext.class), any(AspectsBatchImpl.class), eq(false));
   }
 
+  @Test
+  public void testActorNotHavePermissionToAddBusinessAttribute() throws Exception {
+    Mockito.when(mockEnv.getArgument(Mockito.eq("input"))).thenReturn(addBusinessAttributeInput());
+    Mockito.when(
+            mockService.exists(
+                any(OperationContext.class),
+                eq(Urn.createFromString((BUSINESS_ATTRIBUTE_URN))),
+                eq(true)))
+        .thenReturn(true);
+
+    AddBusinessAttributeInput businessAttributeInput = addBusinessAttributeInput();
+    List<ResourceRefInput> resourceRefInputs = businessAttributeInput.getResourceUrn();
+
+    try (MockedStatic<BusinessAttributeUtils> mockedStatic =
+        mockStatic(BusinessAttributeUtils.class)) {
+      mockedStatic
+          .when(
+              () ->
+                  BusinessAttributeUtils.validateInputResources(
+                      resourceRefInputs, mockEnv.getContext()))
+          .thenThrow(
+              new AuthorizationException(
+                  "Unauthorized to perform this action. Please contact your DataHub administrator."));
+
+      AddBusinessAttributeResolver addBusinessAttributeResolver =
+          new AddBusinessAttributeResolver(mockService);
+      addBusinessAttributeResolver.get(mockEnv).get();
+
+      assertThrows(
+          AuthorizationException.class,
+          () -> {
+            BusinessAttributeUtils.validateInputResources(resourceRefInputs, mockEnv.getContext());
+          });
+    }
+  }
+
   public AddBusinessAttributeInput addBusinessAttributeInput() {
     AddBusinessAttributeInput addBusinessAttributeInput = new AddBusinessAttributeInput();
     addBusinessAttributeInput.setBusinessAttributeUrn(BUSINESS_ATTRIBUTE_URN);
@@ -136,10 +167,10 @@ public class AddBusinessAttributeResolverTest {
     return addBusinessAttributeInput;
   }
 
-  private ImmutableList<ResourceRefInput> resourceRefInput() {
+  private List<ResourceRefInput> resourceRefInput() {
     ResourceRefInput resourceRefInput = new ResourceRefInput();
     resourceRefInput.setResourceUrn(RESOURCE_URN);
-    return ImmutableList.of(resourceRefInput);
+    return List.of(resourceRefInput);
   }
 
   private BusinessAttributes businessAttributes() throws URISyntaxException {
